fix: remove redundant overflow-y property from custom-select-list

--- a/packages/components/src/components/custom-select-list/custom-select-list.scss
+++ b/packages/components/src/components/custom-select-list/custom-select-list.scss
@@ -9,7 +9,6 @@
 	@extend %select-list-container;
 
 	padding: variables.$db-spacing-fixed-sm;
-	overflow-y: auto;
 
 	&::-webkit-scrollbar-button:single-button:vertical:decrement {
 		border-start-end-radius: 0;
